@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title US010 Place an Order - Domain Model

class Client {
-name
-email
-password
}

interface Property {
-area
-location
-distanceFromCityCentre
-agent
-photographs
-finalPrice
-announcementDate
-saleDate
-request
-store
}

class Request{
-type
-price
-priceUnit
-isItPublished
-commissionDate
-owner
-commissionValue
-duration
}

class Land{
}

class Apartment {
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
}

class House {
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
-basement
-inhabitableLoft
-sunExposure
}

class Order {
-property
-amount
-clientEmail
-state
}

Order "1..*" -- "1" Client : done by >
Order "1" -- "1" Property : done for >

Property "1" - Request : has >

Property "1" -- Apartment : can be >
Property "1" -- Land : can be >
Property "1" -- House : can be >


@enduml